--- a/main.kv
+++ b/main.kv
@@ -1,22 +1,24 @@
 MDFloatLayout:
     MDLabel:
         id: task_label
-        halign: "center"
+        halign: 'center'
         markup: True
-        text: "[b][u][size=48]Task Manager[/size][/u][/b]"
-        pos_hint: {"y": 0.45}
+        text: "[u][size=48][b]Task Manager[/b][/size][/u]"
+        pos_hint: {'y': .45}
 
     ScrollView:
-        pos_hint: {"center_y": 0.5, "center_x": 0.5}
-        size_hint: 0.9, 0.8
+        pos_hint: {'center_y': .5, 'center_x': .5}
+        size_hint: .9, .8
+
         MDList:
             id: container
 
+
     MDFloatingActionButton:
-        icon: "plus-thick"
+        icon: 'plus-thick'
         on_release: app.show_task_dialog()
         elevation_normal: 12
-        pos_hint: {"x": 0.45, "y": 0.04}
+        pos_hint: {'x': .45 , 'y': .04}
 
 <DialogContent>:
     orientation: "vertical"
@@ -29,27 +31,43 @@ MDFloatLayout:
 
         MDTextField:
             id: task_text
-            hint_text: "Add Task ..."
-            pos_hint: {"center_y": 0.4}
+            hint_text: "Add Task..."
+            pos_hint: {"center_y": .4}
             max_text_length: 50
-            on_text_validate: app.add_task_function(task_text, date_text.text)
+            on_text_validate: (app.add_task(task_text, date_text.text), app.close_dialog())
 
         MDIconButton:
-            icon: "calendar"
+            icon: 'calendar'
             on_release: root.show_date_picker()
-            padding: "10dp"
+            padding: '10dp'
 
     MDLabel:
-        spacing: "10dp"
+        spacing: '10dp'
         id: date_text
 
     BoxLayout:
-        orientation: "horizontal"
+        orientation: 'horizontal'
 
         MDRaisedButton:
             text: "SAVE"
-            on_release: app.add_task_function(task_text, date_text.text)
-
+            on_release: (app.add_task(task_text, date_text.text), app.close_dialog())
         MDFlatButton:
-            text: "CANCEL"
+            text: 'CANCEL'
             on_release: app.close_dialog()
+
+
+<ListItemWithCheckbox>:
+    id: the_list_item
+    markup: True
+
+    LeftCheckbox:
+        id: check
+        on_release: 
+            root.mark(check, the_list_item)
+
+    IconRightWidget:
+        icon: 'trash-can-outline'
+        theme_text_color: "Custom"
+        text_color: 1, 0, 0, 1
+        on_release:
+            root.delete_item(the_list_item)
